<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/parent_inner_margin"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="@dimen/parent_inner_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_name"
            style="@style/Input"
            android:layout_marginTop="@dimen/dimen_0dp"
            android:autofillHints="@string/hint_full_name"
            android:drawableStart="@drawable/ic_user_color"
            android:hint="@string/hint_full_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/input_email"
            style="@style/Input"
            android:autofillHints="@string/hint_email"
            android:drawableStart="@drawable/ic_letter_color"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_password"
            style="@style/Input"
            android:autofillHints="@string/hint_password"
            android:drawableStart="@drawable/ic_key_color"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/input_confirm_password"
            style="@style/Input"
            android:autofillHints="@string/hint_confirm_password"
            android:drawableStart="@drawable/ic_key_color"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/btn_submit"
            style="@style/FormBtn"
            android:contentDescription="@string/description_submit"
            android:src="@drawable/btn_arrow_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>