<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/card_text_margin"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        style="@style/RectangleCard"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/ranking_position"
            style="@style/BlackText"
            android:text="@string/position" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_padding"
            android:layout_marginEnd="@dimen/card_padding">

            <ImageView
                android:id="@+id/ranking_user_pic"
                android:layout_width="@dimen/medium_pic_size"
                android:layout_height="@dimen/medium_pic_size"
                android:layout_gravity="center"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_placeholder_user_pic" />

            <ImageView
                android:layout_width="@dimen/medium_frame_size"
                android:layout_height="@dimen/medium_frame_size"
                android:background="@drawable/shape_circle"
                android:contentDescription="@null"
                android:scaleType="center" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ranking_user_name"
                style="@style/RectangleCardText"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@string/name" />

            <TextView
                android:id="@+id/ranking_user_reputation"
                style="@style/RectangleCardSmallText"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/value"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>