<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".view.artisans.reviews.ArtisanReviewsAuthenticatedFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_margin"
        android:layout_marginEnd="@dimen/input_margin"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_review"
                style="@style/Input"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/input_margin"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/hint_email"
                android:hint="@string/hint_add_review"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_send"
                style="@style/ImgBtn"
                android:contentDescription="@string/description_submit"
                app:srcCompat="@drawable/ic_arrow_color" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviews_list"
        style="@style/RecyclerViewList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/cardview_artisan_review" />

</androidx.constraintlayout.widget.ConstraintLayout>